<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="F_EncPtpTime" Id="{507e08fb-39d8-4ae3-9bf9-16afcc4828e3}" SpecialFunc="None">
    <Declaration><![CDATA[
(* Calculates the PTP time at which an encode sample was taken. *)
FUNCTION F_EncPtpTime : T_DCTIME64
VAR_INPUT
	plcDcTime: T_DCTIME64;  (* The DC time at the PLC task when the sample was taken.*)
	motionStartTimes: ST_StartTimes;  (* The motion start times for the blade set whose encoder is being sampled. *)
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_EncPtpTime := motionStartTimes.ptpTime + (plcDcTime - motionStartTimes.plcDcTime);
]]></ST>
    </Implementation>
    <LineIds Name="F_EncPtpTime">
      <LineId Id="7" Count="0" />
      <LineId Id="12" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>